# excel-reader

./: CHANGLOG  README.md  pyproject.toml
equation_parser/: langextract_test.ipynb  regex_spacy_test.ipynb  regex_test.ipynb  spacy_test.ipynb
